python done for now

--- a/stanford/stanford_code/test.tex
+++ b/stanford/stanford_code/test.tex
@@ -3,7 +3,7 @@
 \begin{document}
 \begin{center}
 \(
-Q(Z)=\frac{1}{\sqrt{2\pi }}\int\limits_{Z}^{\infty }e^{\frac{-x^{2}}{2}}d\,x
+\Theta (Z)=\frac{1}{/2\pi }\int\limits_{Z}^{\infty .\upsilon }^{\frac{-x^{2}}{2}}x
 \)
 \end{center}
 \end{document}
