--- a/actual_code/test.tex
+++ b/actual_code/test.tex
@@ -3,7 +3,7 @@
 \begin{document}
 \begin{center}
 \(
-\Lambda =\int At\,dt
+6\frac{dx}{dt}+z\frac{d^{2}x}{dt^{2}}=3x
 \)
 \end{center}
 \end{document}
